--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,7 @@
   }
 
   input, textarea {
-    @apply border-gray border rounded-md p-2 outline-primary
+    @apply border-gray border rounded-md p-2 outline-primary [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none;
   }
 }
 
