Add phone number as banner on all pages & update contact form title & update ContactField & update main container padding bottom

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,10 @@
   input, textarea {
     @apply border-gray border rounded-md p-2 outline-primary [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none;
   }
+
+  main {
+    @apply pb-18;
+  }
 }
 
 @layer components {
