--- a/app/index.css
+++ b/app/index.css
@@ -33,7 +33,7 @@
   }
 
   h1 {
-    @apply font-bold tracking-wider text-xl sm:text-3xl xl:text-5xl text-white;
+    @apply font-bold text-3xl xl:text-5xl text-white;
   }
 
   h2 {
