Update cookie dialog & add wapp button to the contact form

--- a/app/index.css
+++ b/app/index.css
@@ -66,6 +66,7 @@
 
   button {
     @apply cursor-pointer p-3 font-semibold duration-300 transition-colors;
+    @apply disabled:cursor-default disabled:opacity-75;
   }
 
   a {
