--- a/app/index.css
+++ b/app/index.css
@@ -94,6 +94,10 @@
  @apply uppercase p-3 font-semibold rounded-lg border-1 hover:bg-transparent duration-300 transition-colors;
 }
 
+@utility link-button-fill-primary {
+  @apply link-button bg-primary text-black border-primary hover:bg-transparent hover:text-white;
+}
+
 @utility first-section-main-content {
   @apply flex flex-col justify-center items-center h-full gap-5 max-w-2xl text-center [&_p]:text-white;
 }
@@ -111,3 +115,4 @@
 @utility glass-button {
   @apply p-8 flex flex-col md:flex-row items-center gap-4 bg-white/10 h-full font-semibold mb-2.5 text-white transition-all duration-300 hover:bg-white/25 hover:scale-105;
 }
+
